# dagprep

./: README.md
.github/workflows/: cicd.yaml
dagprep/: pyproject.toml
dagprep/dagprep/: __init__.py  dagprep.py  dp.py  parellel_dfs.py
dagprep/dagprep/core/: pipeline.py
dagprep/dagprep/core/base/: data_source.py  transformation.py
dagprep/dagprep/core/explorer/: action_fn.py  counter_value.py  pipeline_explorer.py
dagprep/dagprep/example/us1/: graph.py  us1.py
dagprep/dagprep/example/us1/data/: worker.csv
dagprep/dagprep/pandas/: graph.py  us1.py
dagprep/dagprep/pipeline/: action_fn.py  counter_value.py  data.py  find_data_sources.py  pipeline.py  pipeline_explorer.py  prove.py  transformation.py
dagprep/dagprep/pipeline/steps/: data.py  data_source.py  transformation.py
dagprep/dagprep/resources/: logging.conf
dagprep/dagprep/utils/: find_data_sources.py
dagprep/tests/: test_init.py
examples/: pyproject.toml
examples/examples/: __init__.py
examples/examples/dagprep_old/: dp.py
examples/examples/pandas_ex/: __init__.py  dp.py  graph.py  graphviz_dag_prep.py  graphviz_dag_prep_callable.py  networkx_dag_prep.py  pandas_dag_prep.py  transformations.py  us1.py
examples/examples/pandas_ex/data/: cities.csv  companies.csv  worker.csv
