[tool.poetry]
name = "dagprep"
version = "0.2.0"
description = ""
authors = ["Giuseppe Ambrosio <giuambro97@gmail.com>", "Giuseppe Grieco <g.grieco1997@gmail.com>", "Gerlando Re <gerlaxrex@gmail.com>"]
readme = "README.md"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "feat/cicd_release"
changelog_file = "CHANGELOG.md"
build_command = "poetry build"
dist_path = "dist/"
upload_to_release = true
upload_to_pypi = true
remove_dist = false
patch_without_tag = true

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^3.1"
matplotlib = "^3.7.2"
graphviz = "^0.20.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"


[tool.poetry.group.pandas.dependencies]
pandas = "^2.0.3"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.4.1"
autoflake = "^2.2.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
