[tool.poetry]
name = "examples"
version = "0.1.0"
description = "Examples of usage of dagprep"
authors = ["Giuseppe Ambrosio <giuambro97@gmail.com>", "Giuseppe Grieco <g.grieco1997@gmail.com>", "Gerlando Re <gerlaxrex@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
dagprep = { path = "../dagprep" }

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.4.1"
autoflake = "^2.2.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"